--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 githup_health_ingredients.ipynb filter=lfs diff=lfs merge=lfs -text
+/Users/franziska/Documents/__CareerFoundry_Data[[:space:]]Analyst/6_Exercise/Project_Food/03[[:space:]]Scripts/githup_health_ingredients.ipynb filter=lfs diff=lfs merge=lfs -text
